[gd_scene load_steps=5 format=3 uid="uid://bfw3w77r7lynn"]

[ext_resource type="Script" path="res://menu/story/StoryIntro.gd" id="1_0njer"]
[ext_resource type="FontFile" uid="uid://b2fjsai516wbi" path="res://menu/SalmaAlfasans-Light.otf" id="2_1m31l"]
[ext_resource type="Texture2D" uid="uid://c50rvf2lk582g" path="res://menu/beach.jpg" id="3_btd8q"]
[ext_resource type="AudioStream" uid="uid://pu6h2diag8j8" path="res://resources/audio/FUNK_Mix.mp3" id="4_uauuj"]

[node name="StoryIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0njer")

[node name="NextChar" type="Timer" parent="."]

[node name="NextMsg" type="Timer" parent="."]

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = 115.0
offset_right = 212.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_1m31l")
theme_override_font_sizes/font_size = 36
text = "Help Gucchi out!"

[node name="Skip" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -291.0
offset_top = -89.0
offset_right = 291.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_1m31l")
theme_override_font_sizes/font_size = 36
text = "I really don't care, just let me play!"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00255, 1.01048)
mouse_filter = 2
texture = ExtResource("3_btd8q")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.65098)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uauuj")
volume_db = -4.0
autoplay = true

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(873, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.5
offset_top = -210.0
offset_right = 273.5
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1m31l")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="timeout" from="NextChar" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="NextMsg" to="." method="_on_next_msg_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
